--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
     "tailwindcss": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://j-nac.github.io/rapidity/",
+  "homepage": "https://asher-w.github.io/rapidity/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
